--- a/motion-effect/motion_effect_1.html
+++ b/motion-effect/motion_effect_1.html
@@ -30,6 +30,16 @@
             }
         }
 
+        @keyframes fadein2 {
+            from {
+                opacity: 0;
+            }
+
+            to {
+                opacity: 1;
+            }
+        }
+
         @-moz-keyframes fadein {
 
             /* Firefox */
@@ -72,6 +82,7 @@
             height: 100vh;
             width: 100%;
             overflow: hidden;
+            margin: 0 auto;
         }
 
         .color_show {
@@ -82,41 +93,49 @@
 
         .color_show>div {
             height: 100%;
-            width: 40px;
+            width: 3%;
             transition: .3s;
-            box-shadow: -8px 0px 17px 0px;
+            box-shadow: -0.57142rem 0px 1.21428rem 0px;
         }
 
         .color_1 {
             background-color: #fefefe;
+            background: linear-gradient(0deg, #aaaaaa 0%, #fefefe 18%);
         }
 
         .color_2 {
             background-color: #bebebe;
+            background: linear-gradient(0deg, #747474 0%, #bebebe 18%);
         }
 
         .color_3 {
             background-color: #747474;
+            background: linear-gradient(0deg, #4d4d4d 0%, #747474 18%);
         }
 
         .color_4 {
             background-color: #bb2d23;
+            background: linear-gradient(0deg, #7d2b25 0%, rgba(187,45,35,1) 32%);
         }
 
         .color_5 {
             background-color: #e9e4c6;
+            background: linear-gradient(0deg, #90918b 0%, #e9e4c6 18%);
         }
 
         .color_6 {
             background-color: #e2bc4f;
+            background: linear-gradient(0deg, #9d8b40 0%, #e2bc4f 18%);
         }
 
         .color_7 {
             background-color: #c9d34b;
+            background: linear-gradient(0deg, #7c8424 0%, #c9d34b 18%);
         }
 
         .color_8 {
             background-color: #134c9b;
+            background: linear-gradient(0deg, #1c3d6a 0%, #134c9b 18%);
         }
 
         .active_color {
@@ -126,11 +145,11 @@
         .car_img{
             position: absolute;
             top: 37%;
-            left: calc(50% - 640px);
+            left: calc(50% - 45.71428rem);
         }
 
         .car_img>.car_color{
-            width: 1280px;
+            width: 91.42857rem;
             position: absolute;
             z-index: 5;
         }
@@ -149,7 +168,7 @@
         }
 
         .active_color .color_text{
-            animation: fadein 1.3s;
+            animation: fadein2 1s;
             display: inline-block;
             position: relative;
             left: 12%;
@@ -164,6 +183,20 @@
             left: calc(50% - 320px);
             background-color: #bb2d23;
         } */
+        .color_text h3{
+            font-size: 3.71428rem;
+            color: white;
+            text-shadow: 0.28571rem 0.21428rem 0.42857rem #000000;
+        }
+
+        .color_text p {
+            font-size: 1.57142rem;
+            line-height: 2;
+            color: #ffffff;
+            font-weight: 600;
+            text-shadow: 0.21428rem 0.14285rem 0.35714rem #000000;
+        }
+
     </style>
 
 </head>
@@ -175,8 +208,8 @@
         <div class="color_3" id="color_3" value = "3"></div>
         <div class="color_4 active_color" id="color_4" value = "4">
             <div class = "color_text">
-                <h3>빨간색이다 우하하하</h3>
-                <p>나는야 슈퍼 빨간색</p>
+                <h3>빨간색이다 </h3>
+                <p>빨간색</p>
             </div>
         </div>
         <div class="color_5" id="color_5" value = "5"></div>
@@ -192,7 +225,7 @@
         <img alt="차량 이미지" src = "../Asset/images/FQ_4U0.png" class= "car_color" value = "5">
         <img alt="차량 이미지" src = "../Asset/images/FQ_5A3.png" class= "car_color" value = "6">
         <img alt="차량 이미지" src = "../Asset/images/FQ_6W7.png" class= "car_color" value = "7">
-        <img alt="차량 이미지" src = "../Asset/images/FQ_8T7_O_03.png" class= "car_color" value = "8">
+        <img alt="차량 이미지" src = "../Asset/images/FQ_8T7.png" class= "car_color" value = "8">
     </div>
     <script>
         // let colorVal = document.getElementById('btn_1').getAttribute('value') //클래스네임으로 불러왔을땐 value 호출 불가
@@ -210,8 +243,6 @@
                 $(".car_img img[value = " + colorVal + "]").addClass('select_color')
             })
         })
-
-
 
     </script>
 </body>
