--- a/Text_Rolling/text_rolling_hover.html
+++ b/Text_Rolling/text_rolling_hover.html
@@ -28,7 +28,7 @@
             transform: translateY(-100%);
         }
         .text::before{
-            content: attr(over-data);
+            content: attr(hover-data);
             position: absolute;
             top: 100%;
             font-weight: bold;
@@ -43,7 +43,7 @@
 <body>
         <div class= "text_hover_1">
             <div class = "box">
-                <p class = "text" over-data = "hover">hover</p>
+                <p class = "text" hover-data = "hover">hover</p>
             </div>
         </div>
 </body>
