버튼 형식 추가_20200213

--- a/motion-effect/motion_effect_1.html
+++ b/motion-effect/motion_effect_1.html
@@ -115,7 +115,7 @@
 
         .color_4 {
             background-color: #bb2d23;
-            background: linear-gradient(0deg, #7d2b25 0%, rgba(187,45,35,1) 32%);
+            background: linear-gradient(0deg, #7d2b25 0%, #bb2d23 18%);
         }
 
         .color_5 {
