--- a/motion-effect/motion_effect_1.html
+++ b/motion-effect/motion_effect_1.html
@@ -119,13 +119,13 @@
         }
 
         .color_5 {
-            background-color: #e9e4c6;
-            background: linear-gradient(0deg, #90918b 0%, #e9e4c6 18%);
+            background-color: #e2dcb8;
+            background: linear-gradient(0deg, #95917c 0%, #e2dcb8 18%);
         }
 
         .color_6 {
-            background-color: #e2bc4f;
-            background: linear-gradient(0deg, #9d8b40 0%, #e2bc4f 18%);
+            background-color: #edb301;
+            background: linear-gradient(0deg, #9b7911 0%, #edb301 18%);
         }
 
         .color_7 {
@@ -136,6 +136,22 @@
         .color_8 {
             background-color: #134c9b;
             background: linear-gradient(0deg, #1c3d6a 0%, #134c9b 18%);
+        }
+        .color_9 {
+            background-color: #408fa8;
+            background: linear-gradient(0deg, #366574 0%, #408fa8 18%);
+        }
+        .color_10 {
+            background-color: #48596a;
+            background: linear-gradient(0deg, #3b454f 0%, #48596a 18%);
+        }
+        .color_11 {
+            background-color: #ddded3;
+            background: linear-gradient(0deg, #afb0aa 0%, #ddded3 18%);
+        }
+        .color_12 {
+            background-color: #1f1f1f;
+            background: linear-gradient(0deg, #131313 0%, #1f1f1f 18%);
         }
 
         .active_color {
@@ -206,26 +222,29 @@
         <div class="color_1" id="color_1" value = "1"></div>
         <div class="color_2" id="color_2" value = "2"></div>
         <div class="color_3" id="color_3" value = "3"></div>
-        <div class="color_4 active_color" id="color_4" value = "4">
-            <div class = "color_text">
-                <h3>빨간색이다 </h3>
-                <p>빨간색</p>
-            </div>
-        </div>
+        <div class="color_4" id="color_4" value = "4"></div>
         <div class="color_5" id="color_5" value = "5"></div>
         <div class="color_6" id="color_6" value = "6"></div>
         <div class="color_7" id="color_7" value = "7"></div>
         <div class="color_8" id="color_8" value = "8"></div>
+        <div class="color_9" id="color_9" value = "9"></div>
+        <div class="color_10" id="color_10" value = "10"></div>
+        <div class="color_11" id="color_11" value = "11"></div>
+        <div class="color_12 active_color" id="color_12" value = "12"></div>
     </div>
     <div class = "car_img">
-        <img alt="차량 이미지" src = "../Asset/images/FQ_040.png" class= "car_color" value = "1">
-        <img alt="차량 이미지" src = "../Asset/images/FQ_1F7.png" class= "car_color" value = "2">
-        <img alt="차량 이미지" src = "../Asset/images/FQ_1G3.png" class= "car_color" value = "3">
-        <img alt="차량 이미지" src = "../Asset/images/FQ_3P0.png" class= "car_color select_color" value = "4">
-        <img alt="차량 이미지" src = "../Asset/images/FQ_4U0.png" class= "car_color" value = "5">
-        <img alt="차량 이미지" src = "../Asset/images/FQ_5A3.png" class= "car_color" value = "6">
-        <img alt="차량 이미지" src = "../Asset/images/FQ_6W7.png" class= "car_color" value = "7">
-        <img alt="차량 이미지" src = "../Asset/images/FQ_8T7.png" class= "car_color" value = "8">
+        <img alt="차량 이미지" src = "../Asset/images/super_white.png" class= "car_color" value = "1">
+        <img alt="차량 이미지" src = "../Asset/images/silver_metallic.png" class= "car_color" value = "2">
+        <img alt="차량 이미지" src = "../Asset/images/gray_metallic.png" class= "car_color" value = "3">
+        <img alt="차량 이미지" src = "../Asset/images/car_red.png" class= "car_color" value = "4">
+        <img alt="차량 이미지" src = "../Asset/images/beige.png" class= "car_color" value = "5">
+        <img alt="차량 이미지" src = "../Asset/images/yellow.png" class= "car_color" value = "6">
+        <img alt="차량 이미지" src = "../Asset/images/lime_green.png" class= "car_color" value = "7">
+        <img alt="차량 이미지" src = "../Asset/images/blue_metallic.png" class= "car_color" value = "8">
+        <img alt="차량 이미지" src = "../Asset/images/emerald.png" class= "car_color" value = "9">
+        <img alt="차량 이미지" src = "../Asset/images/greyish_blue.png" class= "car_color" value = "10">
+        <img alt="차량 이미지" src = "../Asset/images/white_per_crystal_shine.png" class= "car_color" value = "11">
+        <img alt="차량 이미지" src = "../Asset/images/black.png" class= "car_color select_color" value = "12">
     </div>
     <script>
         // let colorVal = document.getElementById('btn_1').getAttribute('value') //클래스네임으로 불러왔을땐 value 호출 불가
