--- a/swipe/swipe.html
+++ b/swipe/swipe.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel = "stylesheet" href="../Style/reset.css">
-    <style type = "text/css">
+    <link rel="stylesheet" href="../Style/reset.css">
+    <style type="text/css">
+        body {
+            -ms-user-select: none;
+            -moz-user-select: -moz-none;
+            -webkit-user-select: none;
+            -khtml-user-select: none;
+            user-select: none;
+        }
+
         .swipe-box {
-            width : 100%;
+            width: 100%;
             height: 50vh;
             position: absolute;
             top: 50%;
             transform: translateY(-50%);
             background: #eddaba;
         }
-    
+
         .bg-before {
             height: 100%;
             width: 100%;
@@ -22,11 +31,19 @@
             position: absolute;
         }
 
-        .bg-after{
+        .bg-after {
             height: 100%;
-            width: 100%;
+            width: 50%;
             background-color: cadetblue;
             position: absolute;
+            overflow: hidden;
+        }
+
+        .bg-before img,
+        .bg-after img {
+            width: 100vw;
+            height: 100%;
+            object-fit: contain;
         }
 
         .control-bar {
@@ -34,28 +51,48 @@
             width: 20px;
             background-color: #ffffff;
             position: absolute;
+            left: 50%;
         }
-        
     </style>
 </head>
+
 <body>
-    <div class="swipe-box">
+    <div class="swipe-box" id='swipebox'>
         <div class="bg-before">
-            <div class="before-color"></div>
+            <img src="../Asset/images/gray_metallic.png" alt="img" height="100%" draggable="false">
         </div>
-        <div class="bg-after">
-            <div class="after-color"></div>
+        <div class="bg-after" id="afterBg">
+            <img src="../Asset/images/greyish_blue.png" alt="img" height="100%" draggable="false">
         </div>
-        <div class="control-bar" id = "control_bar">
+        <div class="control-bar" id="control_bar">
             <div class="control-color"></div>
         </div>
     </div>
 </body>
 <script>
-    var controlBar = document.getElementById('control_bar')
+    var controlBar = document.getElementById('control_bar'),
+        swipeBox = document.getElementById('swipebox'),
+        afterBg = document.getElementById('afterBg'),
+        swipeVal = false
 
-    controlBar.addEventListener(MouseEvent, function(){
-
+    controlBar.addEventListener('mousedown', (e) => {
+        swipeVal = true
+        swipe(e)
     })
+
+    controlBar.addEventListener('mouseup', (e) => {
+        swipeVal = false
+    })
+
+    function swipe(e) {
+        swipeBox.addEventListener('mousemove', (e) => {
+            if (swipeVal) {
+                controlBar.style.left = (e.clientX - (controlBar.offsetWidth / 2)) + 'px'
+                afterBg.style.width = (e.clientX - (controlBar.offsetWidth / 2)) + 'px'
+            }
+        })
+    }
+
 </script>
+
 </html>
