--- a/swipe/swipe.html
+++ b/swipe/swipe.html
@@ -58,13 +58,13 @@
 
 <body>
     <div class="swipe-box" id='swipebox'>
-        <div class="bg-before">
+        <div class="bg-before"> <!-- 뒤에서 움직이지 않는 이미지 -->
             <img src="../Asset/images/gray_metallic.png" alt="img" height="100%" draggable="false">
         </div>
-        <div class="bg-after" id="afterBg">
+        <div class="bg-after" id="afterBg"><!-- 변경바와 함께 너비가 변하는 이미지 -->
             <img src="../Asset/images/greyish_blue.png" alt="img" height="100%" draggable="false">
         </div>
-        <div class="control-bar" id="control_bar">
+        <div class="control-bar" id="control_bar"> <!-- 배경 위치 조정 막대 -->
             <div class="control-color"></div>
         </div>
     </div>
