--- a/search/search_20200406.html
+++ b/search/search_20200406.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="search_box">
-        <input type="text" maxlength="4" id="text_box" class="search">
+        <input type="text" maxlength="4" id="text_box" class="search" autocomplete="off">
         <button id ="search_btn">검색</button>
     </div>
     <div class="search_list">
