검색기능 세세한 수정 추가

--- a/search/search_20200406.html
+++ b/search/search_20200406.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="search_box">
-        <input type="text" maxlength="4" id="text_box" class="search" autocomplete="off">
+        <input type="text" maxlength="4" id="text_box" class="search" autocomplete="off" placeholder="휴대전화 뒷번호를 입력해주세요.">
         <button id ="search_btn">검색</button>
     </div>
     <div class="search_list">
