무한 슬라이드

--- a/ImageSlide/slide_1.html
+++ b/ImageSlide/slide_1.html
@@ -111,6 +111,7 @@
             slideMotion = (slideContent.clientWidth * -1)
         let doubleEvent = true
 
+        // slidePrev(doubleEvent, slideView, slideMotion);
         slideView.style.left = slideMotion + "px"
 
         document.getElementById("di21").addEventListener("click", () => {
@@ -128,7 +129,6 @@
                 }, 700);
             }
         })
-
         document.getElementById("di22").addEventListener("click", () => {
             if (doubleEvent) {
                 doubleEvent = false
@@ -143,8 +143,8 @@
                     doubleEvent = true
                 }, 700);
             }
-
         })
+
     </script>
 </body>
 
