콘솔로그 제거

--- a/table_sort/tableSort.html
+++ b/table_sort/tableSort.html
@@ -174,8 +174,8 @@
 
                 // console.log(this.closest("table").children[1].children[0].children[0].innerText)
                 // console.log(sortIndexNum)
-                console.log(rowLength)
-                console.log(colLength)
+                // console.log(rowLength)
+                // console.log(colLength)
 
                 
                 for (let i = 0; i < rowLength; i++) {
@@ -203,8 +203,6 @@
                     else if (typeOf_a > typeOf_b) return 1;
                     else return 0
                 })
-
-                // console.log(sortArr)
 
                 for(let i = 0; i < rowLength; i++) {
                     for(let j = 0; j < colLength; j++) {
